Find: Support searching by name and/or module
Find command can only search by name.

By allowing module searching, users can save time and find contacts
easier depending on their motive. Users can also chain module codes
and names to be more specific in their search.

Let's,
* update the search algorithm to tokenize the argument to search for
  specific fields
* update the name predicate class to accommodate for more fields
* update the test methods to verify the correctness of the changes